fix: padding collapse-content

--- a/src/Styles/Components/_collapse.scss
+++ b/src/Styles/Components/_collapse.scss
@@ -32,8 +32,7 @@
 .collapse-content {
     background-color: $color2;
     border-radius: 5px;
-    padding:10px;
-    padding-bottom: 40px;
-    padding-top: 40px;
+    padding:20px;
+  
     
 }
