--- a/src/Styles/Components/_page.scss
+++ b/src/Styles/Components/_page.scss
@@ -48,6 +48,7 @@
 
     .ulEquipement {
       list-style-type: none;
+      padding: 0;
     }
   }
 }
